--- a/agenda.html
+++ b/agenda.html
@@ -2,29 +2,26 @@
 <html lang="es">
 
 <head>
-    <link rel="canonical" href="https://www.aurumstudio.es/agenda.html">
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    
-    <title>Agenda tu sesión privada | Aurum Studio</title>
-    <meta name="description" content="Reserva tu sesión privada con Aurum Studio. Revisión de tu captación actual + plan para generar más citas y ventas premium.">
-    <meta name="robots" content="index,follow">
+  <title>Agenda tu sesión privada | Aurum Studio</title>
+  <meta name="description" content="Reserva tu sesión privada con Aurum Studio. Revisamos tu captación actual y te damos un plan para generar más citas con compradores premium.">
+  <meta name="robots" content="index,follow" />
 
+  <link rel="canonical" href="https://www.aurumstudio.es/agenda.html" />
 
-    <title>Aurum Studio | Reserva tu sesion</title>
-    <meta name="description" content="Reserva tu sesion privada con Aurum Studio." />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:url" content="https://www.aurumstudio.es/agenda.html" />
+  <meta property="og:title" content="Agenda tu sesión privada | Aurum Studio" />
+  <meta property="og:description" content="Reserva tu sesión privada. Revisamos tu captación actual y te damos un plan para generar más citas premium." />
+  <meta property="og:image" content="https://www.aurumstudio.es/assets/og-image-1200x630.png" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
-        rel="stylesheet" />
-
-    <link rel="stylesheet" href="/styles.css" />
-    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet" />
+  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
+
 
 <body>
     <div class="agenda-page">
