--- a/aviso-legal.html
+++ b/aviso-legal.html
@@ -2,19 +2,19 @@
 <html lang="es">
 
 <head>
-  <link rel="canonical" href="https://www.aurumstudio.es/aviso-legal.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Aviso legal | Aurum Studio</title>
-  <meta name="description" content="Información legal, condiciones de uso y datos del titular del sitio web de Aurum Studio.">
-  <meta name="robots" content="noindex,follow">
+  <meta name="description" content="Aviso legal del sitio web de Aurum Studio. Información del titular, condiciones de uso y responsabilidades." />
+  <meta name="robots" content="noindex,follow" />
 
-  <title>Aviso legal | Aurum Studio</title>
-  <meta name="robots" content="index,follow" />
-  <meta name="description" content="Aviso legal y condiciones de uso del sitio web de Aurum Studio." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="canonical" href="https://www.aurumstudio.es/aviso-legal.html" />
+
+  <link rel="icon" href="/assets/favicon.ico" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
+
 
 <body class="legal-page">
   <main class="legal-body">
