--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Aurum Studio — Marketing & Ads para joyerías de lujo</title>
-  <meta name="description" content="Sistema premium: anuncios, landing, cualificación y agenda para atraer compradores high ticket. Reserva una sesión privada con Aurum Studio." />
+  <meta name="description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda. Reserva una sesión privada con Aurum Studio.">
   <meta name="robots" content="index,follow" />
+
   <link rel="canonical" href="https://www.aurumstudio.es/" />
 
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="es_ES" />
   <meta property="og:url" content="https://www.aurumstudio.es/" />
   <meta property="og:title" content="Aurum Studio — Marketing & Ads para joyerías de lujo" />
-  <meta property="og:description" content="Sistema premium: anuncios, landing, cualificación y agenda para atraer compradores high ticket." />
+  <meta property="og:description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
   <meta property="og:image" content="https://www.aurumstudio.es/assets/og-image-1200x630.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Aurum Studio — Marketing & Ads para joyerías de lujo" />
-  <meta name="twitter:description" content="Sistema premium: anuncios, landing, cualificación y agenda para atraer compradores high ticket." />
+  <meta name="twitter:description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
   <meta name="twitter:image" content="https://www.aurumstudio.es/assets/og-image-1200x630.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
 
-  <link rel="icon" href="assets/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="/styles.css" />
 </head>
-
-
 
 
 
