--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -2,21 +2,19 @@
 <html lang="es">
 
 <head>
-  <link rel="canonical" href="https://www.aurumstudio.es/politica-privacidad.html">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  
   <title>Política de privacidad | Aurum Studio</title>
-  <meta name="description" content="Política de privacidad y protección de datos (RGPD) del sitio web de Aurum Studio.">
-  <meta name="robots" content="noindex,follow">
+  <meta name="description" content="Política de privacidad y protección de datos (RGPD) del sitio web de Aurum Studio." />
+  <meta name="robots" content="noindex,follow" />
 
+  <link rel="canonical" href="https://www.aurumstudio.es/politica-privacidad.html" />
 
-  <title>Política de privacidad | Aurum Studio</title>
-  <meta name="robots" content="index,follow" />
-  <meta name="description" content="Política de privacidad del sitio web de Aurum Studio." />
+  <link rel="icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="/styles.css" />
 </head>
+
 
 <body class="legal-page">
   <main class="legal-body">
