Add schema to homepage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 
   <link rel="icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="/styles.css" />
+  <head>
+  <!-- ... tus meta, title, canonical, OG, fonts, css ... -->
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Aurum Studio",
+    "url": "https://www.aurumstudio.es/",
+    "description": "Marketing & Ads para joyerías de lujo. Sistema de captación para generar citas con compradores de alto valor.",
+    "areaServed": "ES",
+    "email": "enrique@aurumstudio.es"
+  }
+  </script>
 </head>
 
 
