Add SEO content section to homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Aurum Studio — Marketing & Ads para joyerías de lujo</title>
-  <meta name="description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda. Reserva una sesión privada con Aurum Studio.">
+  <meta name="description"
+    content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda. Reserva una sesión privada con Aurum Studio.">
   <meta name="robots" content="index,follow" />
 
   <link rel="canonical" href="https://www.aurumstudio.es/" />
@@ -15,24 +16,29 @@
   <meta property="og:locale" content="es_ES" />
   <meta property="og:url" content="https://www.aurumstudio.es/" />
   <meta property="og:title" content="Aurum Studio — Marketing & Ads para joyerías de lujo" />
-  <meta property="og:description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
+  <meta property="og:description"
+    content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
   <meta property="og:image" content="https://www.aurumstudio.es/assets/og-image-1200x630.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Aurum Studio — Marketing & Ads para joyerías de lujo" />
-  <meta name="twitter:description" content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
+  <meta name="twitter:description"
+    content="Atrae citas con compradores high ticket con un sistema premium: anuncios, landing, cualificación y agenda." />
   <meta name="twitter:image" content="https://www.aurumstudio.es/assets/og-image-1200x630.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap"
+    rel="stylesheet" />
 
   <link rel="icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="/styles.css" />
-  <head>
-  <!-- ... tus meta, title, canonical, OG, fonts, css ... -->
 
-  <script type="application/ld+json">
+  <head>
+    <!-- ... tus meta, title, canonical, OG, fonts, css ... -->
+
+    <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
@@ -43,7 +49,7 @@
     "email": "enrique@aurumstudio.es"
   }
   </script>
-</head>
+  </head>
 
 
 
@@ -599,6 +605,71 @@
       });
     })();
   </script>
+  <section class="seo-block" aria-label="Marketing para joyerías de lujo">
+    <div class="seo-inner">
+      <h2>Marketing para joyerías de lujo: cómo generamos citas premium</h2>
+      <p>
+        En joyería de alto valor, el problema casi nunca es el producto. El problema es el sistema: estás pagando
+        tráfico
+        para llevarlo a Instagram o a un WhatsApp sin filtro, y terminas hablando con curiosos que solo preguntan
+        precio.
+        Aurum Studio diseña un proceso de captación pensado para lujo: menos volumen, más intención.
+      </p>
+      <p>
+        Nuestro objetivo es simple: que tu equipo invierta el tiempo únicamente en conversaciones con compradores
+        reales.
+        Para eso combinamos estrategia, anuncios y cualificación. Así reduces preguntas de “¿cuánto cuesta?” y aumentas
+        las citas con clientes que entienden el valor de una pieza, una marca y una experiencia premium.
+      </p>
+
+      <h2>Nuestro sistema: anuncios → landing → cualificación → agenda</h2>
+      <p>
+        El sistema funciona como un embudo claro y medible. Primero lanzamos anuncios con ángulos adecuados para alta
+        joyería (no “ofertas” masivas), que atraen a perfiles con capacidad de compra. Después, el tráfico llega a una
+        landing diseñada para convertir en lujo: posicionamiento, prueba, mensaje claro y una llamada a la acción.
+      </p>
+      <p>
+        A continuación, un formulario de cualificación filtra a quien no encaja y prioriza a los perfiles correctos.
+        Por último, el comprador agenda una sesión en tu calendario para que la conversación empiece con contexto y
+        con intención. El resultado es un pipeline más limpio, con citas de mayor calidad y un proceso repetible.
+      </p>
+
+      <h2>Preguntas frecuentes</h2>
+      <details class="faq">
+        <summary>¿Esto funciona si ya hacemos publicidad?</summary>
+        <p>
+          Sí. Normalmente el fallo no es “hacer ads”, sino la falta de filtro y de una landing orientada a lujo.
+          Optimizar el sistema suele mejorar la calidad de los leads y la tasa de cita.
+        </p>
+      </details>
+
+      <details class="faq">
+        <summary>¿Necesito publicar contenido en redes para que funcione?</summary>
+        <p>
+          No es imprescindible. El sistema está pensado para depender de un embudo controlado (anuncios + landing +
+          filtro),
+          no de “viralidad”.
+        </p>
+      </details>
+
+      <details class="faq">
+        <summary>¿Cuánto tarda en notarse?</summary>
+        <p>
+          Depende del punto de partida, pero normalmente en las primeras semanas ya se ve mejora en la calidad de los
+          leads y en el volumen de citas cualificadas.
+        </p>
+      </details>
+
+      <details class="faq">
+        <summary>¿Para qué tipo de joyerías es?</summary>
+        <p>
+          Para joyerías y relojerías premium que quieren atraer compradores de alto valor y tener un proceso estable de
+          captación sin depender de mensajes por DM.
+        </p>
+      </details>
+    </div>
+  </section>
+
   <footer class="site-footer">
     <div class="footer-brand">© Aurum Studio</div>
 
