Style SEO + FAQ glow

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
       });
     })();
   </script>
-  <section class="seo-block" aria-label="Marketing para joyerías de lujo">
+  <section class="seo-block" id="faq" aria-label="Marketing para joyerías de lujo">
     <div class="seo-inner">
       <h2>Marketing para joyerías de lujo: cómo generamos citas premium</h2>
       <p>
@@ -610,7 +610,7 @@
         con intención. El resultado es un pipeline más limpio, con citas de mayor calidad y un proceso repetible.
       </p>
 
-      <h2>Preguntas frecuentes</h2>
+      <h2 id="faq">Preguntas frecuentes</h2>
       <details class="faq">
         <summary>¿Esto funciona si ya hacemos publicidad?</summary>
         <p>
