Center SEO + FAQ and add glow

--- a/index.html
+++ b/index.html
@@ -581,70 +581,75 @@
       });
     })();
   </script>
-  <section class="seo-block" id="faq" aria-label="Marketing para joyerías de lujo">
-    <div class="seo-inner">
-      <h2>Marketing para joyerías de lujo: cómo generamos citas premium</h2>
+  <section class="seo-block" aria-label="Marketing para joyerías de lujo">
+  <div class="seo-inner">
+    <h2>Marketing para joyerías de lujo: cómo generamos citas premium</h2>
+
+    <p>
+      En joyería de alto valor, el problema casi nunca es el producto. El problema es el sistema: estás pagando tráfico
+      para llevarlo a Instagram o a un WhatsApp sin filtro, y terminas hablando con curiosos que solo preguntan precio.
+      Aurum Studio diseña un proceso de captación pensado para lujo: menos volumen, más intención.
+    </p>
+
+    <p>
+      Nuestro objetivo es simple: que tu equipo invierta el tiempo únicamente en conversaciones con compradores reales.
+      Para eso combinamos estrategia, anuncios y cualificación. Así reduces preguntas de “¿cuánto cuesta?” y aumentas
+      las citas con clientes que entienden el valor de una pieza, una marca y una experiencia premium.
+    </p>
+
+    <h2>Nuestro sistema: anuncios → landing → cualificación → agenda</h2>
+
+    <p>
+      El sistema funciona como un embudo claro y medible. Primero lanzamos anuncios con ángulos adecuados para alta
+      joyería (no “ofertas” masivas), que atraen a perfiles con capacidad de compra. Después, el tráfico llega a una
+      landing diseñada para convertir en lujo: posicionamiento, prueba, mensaje claro y una llamada a la acción.
+    </p>
+
+    <p>
+      A continuación, un formulario de cualificación filtra a quien no encaja y prioriza a los perfiles correctos.
+      Por último, el comprador agenda una sesión en tu calendario para que la conversación empiece con contexto y con
+      intención. El resultado es un pipeline más limpio, con citas de mayor calidad y un proceso repetible.
+    </p>
+  </div>
+
+  <!-- ✅ Este es el ancla del botón "FAQ" / "#faq" -->
+  <div id="faq" class="faq-stack">
+    <h2>Preguntas frecuentes</h2>
+
+    <details class="faq">
+      <summary>¿Esto funciona si ya hacemos publicidad?</summary>
       <p>
-        En joyería de alto valor, el problema casi nunca es el producto. El problema es el sistema: estás pagando
-        tráfico
-        para llevarlo a Instagram o a un WhatsApp sin filtro, y terminas hablando con curiosos que solo preguntan
-        precio.
-        Aurum Studio diseña un proceso de captación pensado para lujo: menos volumen, más intención.
+        Sí. Normalmente el fallo no es “hacer ads”, sino la falta de filtro y de una landing orientada a lujo.
+        Optimizar el sistema suele mejorar la calidad de los leads y la tasa de cita.
       </p>
+    </details>
+
+    <details class="faq">
+      <summary>¿Necesito publicar contenido en redes para que funcione?</summary>
       <p>
-        Nuestro objetivo es simple: que tu equipo invierta el tiempo únicamente en conversaciones con compradores
-        reales.
-        Para eso combinamos estrategia, anuncios y cualificación. Así reduces preguntas de “¿cuánto cuesta?” y aumentas
-        las citas con clientes que entienden el valor de una pieza, una marca y una experiencia premium.
+        No es imprescindible. El sistema está pensado para depender de un embudo controlado (anuncios + landing + filtro),
+        no de “viralidad”.
       </p>
+    </details>
 
-      <h2>Nuestro sistema: anuncios → landing → cualificación → agenda</h2>
+    <details class="faq">
+      <summary>¿Cuánto tarda en notarse?</summary>
       <p>
-        El sistema funciona como un embudo claro y medible. Primero lanzamos anuncios con ángulos adecuados para alta
-        joyería (no “ofertas” masivas), que atraen a perfiles con capacidad de compra. Después, el tráfico llega a una
-        landing diseñada para convertir en lujo: posicionamiento, prueba, mensaje claro y una llamada a la acción.
+        Depende del punto de partida, pero normalmente en las primeras semanas ya se ve mejora en la calidad de los leads
+        y en el volumen de citas cualificadas.
       </p>
+    </details>
+
+    <details class="faq">
+      <summary>¿Para qué tipo de joyerías es?</summary>
       <p>
-        A continuación, un formulario de cualificación filtra a quien no encaja y prioriza a los perfiles correctos.
-        Por último, el comprador agenda una sesión en tu calendario para que la conversación empiece con contexto y
-        con intención. El resultado es un pipeline más limpio, con citas de mayor calidad y un proceso repetible.
+        Para joyerías y relojerías premium que quieren atraer compradores de alto valor y tener un proceso estable de
+        captación sin depender de mensajes por DM.
       </p>
+    </details>
+  </div>
+</section>
 
-      <h2 id="faq">Preguntas frecuentes</h2>
-      <details class="faq">
-        <summary>¿Esto funciona si ya hacemos publicidad?</summary>
-        <p>
-          Sí. Normalmente el fallo no es “hacer ads”, sino la falta de filtro y de una landing orientada a lujo.
-          Optimizar el sistema suele mejorar la calidad de los leads y la tasa de cita.
-        </p>
-      </details>
-
-      <details class="faq">
-        <summary>¿Necesito publicar contenido en redes para que funcione?</summary>
-        <p>
-          No es imprescindible. El sistema está pensado para depender de un embudo controlado (anuncios + landing +
-          filtro),
-          no de “viralidad”.
-        </p>
-      </details>
-
-      <details class="faq">
-        <summary>¿Cuánto tarda en notarse?</summary>
-        <p>
-          Depende del punto de partida, pero normalmente en las primeras semanas ya se ve mejora en la calidad de los
-          leads y en el volumen de citas cualificadas.
-        </p>
-      </details>
-
-      <details class="faq">
-        <summary>¿Para qué tipo de joyerías es?</summary>
-        <p>
-          Para joyerías y relojerías premium que quieren atraer compradores de alto valor y tener un proceso estable de
-          captación sin depender de mensajes por DM.
-        </p>
-      </details>
-    </div>
-  </section>
 
   <footer class="site-footer">
     <div class="footer-brand">© Aurum Studio</div>
