--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     rel="stylesheet" />
 
   <link rel="icon" href="/assets/favicon.ico" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/styles.css?v=99" />
 
   <head>
     <!-- ... tus meta, title, canonical, OG, fonts, css ... -->
